# towels

./: .gitignore  .gitmodules  Cargo.toml  README.md  go.mod
cmd/: main.go  main_test.go
src/: main.rs
towels_cmd/: Cargo.toml
towels_gui/: Cargo.toml  index.html
towels_gui/assets/: sw.js
towels_gui/src/: app.rs  gui.rs  lib.rs  main.rs
towels_lib/: Cargo.toml
