[package]
name = "towels_cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
towels_lib = { path = "../towels_lib" }
towels_gui = { path = "../towels_gui" }
clap = { version = "4.0.15", features = ["derive"] }

